finish of desctop version

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
     <!--    <link rel="stylesheet" href="/templates/sap/js/OwlCarousel2-2.2.1/dist/assets/owl.castom.carousel.min.css">-->
     <!--    <link rel="stylesheet" href="/templates/sap/js/OwlCarousel2-2.2.1/dist/assets/owl.theme.default.min.css">-->
     <!--<link rel="stylesheet" href="--><!--css/owl.carousel.min.css">-->
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/FlexSlider/flexslider-custom.css">
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/Remodal-1.1.1/src/remodal.css">
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/Remodal-1.1.1/src/remodal-default-theme.css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/FlexSlider/flexslider-custom.css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/Remodal-1.1.1/src/remodal.css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/Remodal-1.1.1/src/remodal-default-theme.css">
     <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/main-plus09-10-17.css?" type="text/css">
     <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/addon.css?" type="text/css">
     <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/responsive.css?" type="text/css">
     <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/erp-solution-block.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
 
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/slickslider/slick.css" type="text/css">
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/slickslider/slick-theme.css" type="text/css">
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/fancybox3/jquery.fancybox.min.css" type="text/css">
-        <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/slickslider/slick.css" type="text/css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/slickslider/slick-theme.css" type="text/css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/fancybox3/jquery.fancybox.min.css" type="text/css">
+    <link rel="stylesheet" href="https://sapb1cloud.ru/templates/sap/css/font-awesome.min.css" type="text/css">
 
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -437,7 +437,8 @@
 <section class="s_wmsSlider">
     <div class="container">
         <div class="wmsSlider">
-            <p><span>Produmex WMS</span> был разработан для обеспечения контроля и документирования логистических процессов в цеху или на складе. </p>
+            <p><span>Produmex WMS</span> был разработан для обеспечения контроля и документирования логистических
+                процессов в цеху или на складе. </p>
 
             <img class="wmsSlider__image" src="images/slider.jpg" alt="image">
 
@@ -738,6 +739,42 @@
                     <img src="images/man.png" alt="image">
                 </li>
             </ul>
+        </div>
+    </div>
+</section>
+
+<section class="s_wmsExperience">
+    <div class="s_wmsExperience__pattern"></div>
+    <div class="container">
+        <div class="wmsExperience">
+            <h2 class="section-title section-title--black">Опыт внедрения складских решений</h2>
+            <div class="wmsExperience_top">
+                <div class="wmsExperience_top_left">
+                    <img src="images/underground.jpg" alt="image">
+                </div>
+                <div class="wmsExperience_top_right">
+                    <div class="wmsExperience__itemTitle"><span>Клиент:</span> Петербургский метрополитен</div>
+                    <div class="wmsExperience__itemTitle"><span>Задача:</span> автоматизировать более 10 складов</div>
+                    <p>Поступление заданий на мобильные устройства в режиме online позволило сотрудникам рационально
+                        использовать рабочее время, а процесс перемещения МПЗ ускорился в несколько раз.</p>
+                    <p class="wmsExperience_small">Дмитрий Александрович Новожилов, начальник службы
+                        материально-технического снабжения ГУП «Петербургский метрополитен»</p>
+                    <div class="wmsExperience__nums">01</div>
+                </div>
+            </div>
+            <div class="wmsExperience_bottom">
+                <div class="wmsExperience_bottom_left">
+                    <div class="wmsExperience__itemTitle"><span>Клиент:</span> Велесстрой</div>
+                    <div class="wmsExperience__itemTitle"><span>Задача:</span> Реализация облачного сервиса учета
+                        складского оборудования и материалов по технологии RFID.
+                    </div>
+                    <p>Переход от количественного учета оборудования к номерному</p>
+                    <div class="wmsExperience__nums">02</div>
+                </div>
+                <div class="wmsExperience_bottom_right">
+                    <img src="images/oil.jpg" alt="image">
+                </div>
+            </div>
         </div>
     </div>
 </section>
